--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <br><br>
         <a class="btn btn-primary" href="stack.html" role="button">Stack</a>&nbsp;&nbsp;
         <a class="btn btn-primary" href="queue.html" role="button">Queue</a>
+        <br><br>
+        <h5><a style="text-decoration:none; color: #ffffff;" target="_blank" href="https://mapur2.github.io/portfolio/">@Rupam Modak</a></h5>
     </div>
 </body>
 </html>
